@@ -1,5 +1,7 @@
 Changes to Version 2.0-12
 
+  o modified compareCoefs to support any S4 object with that responds to the 'coefs' and 'vcov' methods
+
     o fixed bug in deltaMethod.surveg and deltaMethod.coxph to all use of the 'parameterNames' argument.
 
 	o compareCoefs:  added an argument 'print' to suppress printing output.  Added support for 'lme' objects.
